--- a/random-jokes/assets/css/style.css
+++ b/random-jokes/assets/css/style.css
@@ -104,6 +104,12 @@
   background-color: #4c2112;
 }
 
+/* Custom Scrollbar */
+::-webkit-scrollbar { width: 5px; height: 5px; }
+::-webkit-scrollbar-track { background: #f1f1f1; }
+::-webkit-scrollbar-thumb { background: #888; border-radius: 25px;}
+::-webkit-scrollbar-thumb:hover { background: #555; }
+
 h1 {
   font-size: 40px;
   font-weight: 700;
