--- a/rotating-navigation/style.css
+++ b/rotating-navigation/style.css
@@ -5,6 +5,12 @@
     box-sizing: border-box;
 }
 
+/* Custom Scrollbar */
+::-webkit-scrollbar { width: 7px; height: 7px; }
+::-webkit-scrollbar-track { background: #f1f1f1; }
+::-webkit-scrollbar-thumb { background: #ff7979; border-radius: 25px;}
+::-webkit-scrollbar-thumb:hover { background: #e43737; }
+
 body {
     margin: 0;
     background-color: #333;
