--- a/text-reader/style.css
+++ b/text-reader/style.css
@@ -24,53 +24,50 @@
 ::-webkit-scrollbar-thumb:hover { background: var(--primary-color); }
 
 body {
-  background: var(--secondary-color);
-  font-family: 'Lato', sans-serif;
   min-height: 100vh;
   margin: 0;
+  background: var(--secondary-color);
+  font-family: 'Lato', sans-serif;
 }
 
 h1 {
   color: var(--primary-color);
-  text-align: center;
   font-weight: 700;
+  text-align: center;
 }
 
 .container {
   max-width: 1400px;
-  margin: 0 auto;
   padding: 20px;
+  margin: 0 auto;
 }
 
 .btn {
-  cursor: pointer;
-  background-color: var(--primary-color);
+  padding: 8px;
   border: 0;
   border-radius: 4px;
+  background-color: var(--primary-color);
+  cursor: pointer;
   color: #fff;
   font-size: 16px;
-  padding: 8px;
 }
 
-.btn:active {
-  transform: scale(0.98);
-}
+.btn:active { transform: scale(0.98); }
 
 .btn:focus,
-select:focus {
-  outline: 0;
-}
+select:focus { outline: 0; }
 
 .btn-toggle {
   padding: 10px 25px;
+  margin: 0 auto 20px;
   display: block;
-  margin: auto;
-  margin-bottom: 20px;
 }
 
 .text-box {
   width: 70%;
   max-width: 1000px;
+  padding: 20px;
+  border-radius: 5px;
   margin: 0 auto;
   position: absolute;
   top: 30%;
@@ -78,42 +75,44 @@ select:focus {
   transform: translate(-50%, -1800px);
   background-color: #333;
   color: #fff;
-  padding: 20px;
-  border-radius: 5px;
   transition: all 1s ease-in-out;
 }
 
-.text-box.show {
-  transform: translate(-50%, 0);
-}
+.text-box.show { transform: translate(-50%, 0); }
 
 .text-box select {
-  background-color: var(--primary-color);
+  width: 100%;
+  height: 30px;
   border: 0;
+  background-color: var(--primary-color);
   color: #fff;
   font-size: 12px;
-  height: 30px;
-  width: 100%;
 }
 
 .text-box textarea {
-  border: 1px #dadada solid;
-  border-radius: 4px;
-  font-size: 16px;
-  padding: 8px;
-  margin: 15px 0;
   width: 100%;
   height: 150px;
+  padding: 8px;
+  border: 1px #dadada solid;
+  border-radius: 4px;
+  margin: 15px 0;
+  font-size: 16px;
+  resize: vertical;
 }
 
-.text-box .btn {
-  width: 100%;
+.btn-container {
+  display: flex;
+  justify-content: space-between;
 }
+
+.btn-container .btn { flex-basis: 30%; }
+
+.text-box .btn { width: 100%; }
 
 .text-box .close {
   float: right;
-  text-align: right;
   cursor: pointer;
+  text-align: right;
 }
 
 main {
@@ -123,51 +122,45 @@ main {
 }
 
 .box {
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
-  cursor: pointer;
   display: flex;
   flex-direction: column;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
   overflow: hidden;
   transition: box-shadow 0.8s ease-out;
 }
 
-.box.active {
-  box-shadow: 0 0 10px 5px var(--primary-color);
-}
+.box.active { box-shadow: 0 0 10px 5px var(--primary-color); }
 
 .box img {
   width: 100%;
-  object-fit: cover;
   height: 200px;
+  object-fit: cover;
 }
 
 .box .info {
+  height: 100%;
+  padding: 10px;
+  margin: 0;
   background-color: var(--primary-color);
   color: #fff;
   font-size: 18px;
   letter-spacing: 1px;
-  text-transform: uppercase;
-  margin: 0;
-  padding: 10px;
   text-align: center;
-  height: 100%;
+  text-transform: uppercase;
 }
 
 @media (max-width: 1100px) {
-  main {
-    grid-template-columns: repeat(3, 1fr);
-  }
+  main { grid-template-columns: repeat(3, 1fr); }
 }
 
 @media (max-width: 760px) {
-  main {
-    grid-template-columns: repeat(2, 1fr);
-  }
+  main { grid-template-columns: repeat(2, 1fr); }
 }
 
 @media (max-width: 500px) {
-  main {
-    grid-template-columns: 1fr;
-  }
+  main { grid-template-columns: 1fr; }
+
+  .text-box .btn { font-size: 14px; }
 }
