new-year-coundown dynamic countdown functionality created

--- a/new-year-countdown/style.css
+++ b/new-year-countdown/style.css
@@ -48,8 +48,7 @@ h1 {
 }
 
 .countdown {
-  display: flex;
-  /* display: none; */
+  display: none;
   transform: scale(2);
 }
 
@@ -73,4 +72,5 @@ h1 {
   }
 
   .time small { font-size: 10px; }
+  .year { font-size: 120px; }
 }
