--- a/tic-tac-toe/style.css
+++ b/tic-tac-toe/style.css
@@ -50,6 +50,8 @@ section { text-align: center; }
     font-size: 60px;
 }
 
+.winbox-highlight { background-color: #d3d3d3; }
+
 .game-restart {
     padding: 10px 20px;
     border: none;
@@ -66,6 +68,7 @@ section { text-align: center; }
 .game-restart:hover { background-color: #3e3e3e; }
 
 @media screen and (max-width:480px) {
+    body { display: block; }
     .game-title { font-size: 32px; }
     .game-restart:hover { background-color: #000; }
 }
