--- a/expense-tracker/style.css
+++ b/expense-tracker/style.css
@@ -82,6 +82,13 @@ h4 {
 	letter-spacing: 1px;
 }
 
+.balance::before {
+	margin-right: 5px;
+	font-family: "Font Awesome 5 Free"; 
+	font-weight: 900; 
+	content: "\f555";
+}
+
 .money {
 	margin: 5px 0;
 	font-size: 20px;
