expense-tracker print page format adjusted

--- a/expense-tracker/style.css
+++ b/expense-tracker/style.css
@@ -201,7 +201,10 @@ input[type='number']:focus {
 @media print {
 	@page { margin: 30px; }
 
-	body { display: block; }
+	body { 
+		align-items: start;
+		justify-content: flex-start;
+	}
 
 	.print-hide,
 	#form { display: none; }
