--- a/expense-tracker/style.css
+++ b/expense-tracker/style.css
@@ -12,6 +12,12 @@
 	--border-color: #bbb;
 }
 
+/* Custom Scrollbar */
+::-webkit-scrollbar { width: 7px; height: 7px; }
+::-webkit-scrollbar-track { background: var(--body-background); }
+::-webkit-scrollbar-thumb { background: var(--container-background); border-radius: 25px;}
+::-webkit-scrollbar-thumb:hover { background: var(--light-color); }
+
 * { box-sizing: border-box; }
 
 body {
@@ -58,6 +64,26 @@ h4 {
 	text-transform: uppercase;
 }
 
+.currency-select {
+	width: 25px;
+	height: 25px;
+	border: 0;
+	outline: 0;
+	border-radius: 25px;
+	margin-bottom: 20px;
+	float: right;
+	background-color: var(--body-background);
+	color: var(--light-color);
+	cursor: pointer;
+	font-size: 12px;
+	font-weight: 700;
+	-webkit-appearance: none;
+  -moz-appearance: none;
+  text-indent: 1px;
+  text-overflow: '';
+	text-align: center;
+}
+
 .inc-exp-container {
 	padding: 20px;
 	margin: 20px 0;
@@ -65,6 +91,7 @@ h4 {
 	justify-content: space-between;
 	background-color: var(--light-color);
 	box-shadow: var(--box-shadow);
+	transition: all 0.3s ease-in-out;
 }
 
 .inc-exp-container>div {
@@ -82,7 +109,7 @@ h4 {
 	letter-spacing: 1px;
 }
 
-.balance::before {
+.balance-text::before {
 	margin-right: 5px;
 	font-family: "Font Awesome 5 Free"; 
 	font-weight: 900; 
@@ -94,6 +121,7 @@ h4 {
 	font-size: 20px;
 	font-weight: 700;
 	letter-spacing: 1px;
+	transition: all 0.3s ease-in-out;
 }
 
 .money.plus { color: var(--income-color); }
@@ -191,11 +219,18 @@ input[type='number']:focus {
 /* Responsive Styling */
 
 @media screen and (max-width:995px) {
-	.container { width: 450px; }
+	body {
+		width: 80%;
+		margin: 0 auto;
+	}
+
+	.container { width: 100%; }
 }
 
 @media screen and (max-width:480px) {
-	.container { width: 300px; }
+	body { width: 90%; }
+	.inc-exp-container { padding: 10px; }
+	.money { font-size: 16px; }
 }
 
 @media print {
