--- a/exchange-rate/style.css
+++ b/exchange-rate/style.css
@@ -7,15 +7,20 @@
   }
   
   body {
-    background-color: #f4f4f4;
+    background-color: #d6d6d6;
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
-    margin: 0;
-    padding: 20px;
+  }
+
+  .wrapper {
+    background-color: #ffffff;
+    padding: 30px;
+    border-radius: 20px;
   }
   
   h1 {
