--- a/exchange-rate/style.css
+++ b/exchange-rate/style.css
@@ -1,101 +1,136 @@
-:root {
-    --primary-color: #5fbaa7;
-  }
+:root { 
+  --primary-color: #5fbaa7; 
+  --secondary-color: #008064;
+  --light-color: #fff;
+  --dark-color: #000;
+}
   
-  * {
-    box-sizing: border-box;
-  }
-  
-  body {
-    background-color: #d6d6d6;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-  }
+* { box-sizing: border-box; }
 
-  .wrapper {
-    background-color: #ffffff;
-    padding: 30px;
-    border-radius: 20px;
-  }
-  
-  h1 {
-    color: var(--primary-color);
-  }
-  
-  p {
+/* Custom Scrollbar */
+::-webkit-scrollbar { width: 7px; height: 7px; }
+::-webkit-scrollbar-track { background: var(--light-color); }
+::-webkit-scrollbar-thumb { background: var(--secondary-color); border-radius: 25px;}
+::-webkit-scrollbar-thumb:hover { background: var(--dark-color); }
+
+body {
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  background-color: var(--primary-color);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.wrapper {
+  width: 500px;
+  padding: 30px;
+  border-radius: 20px;
+  background-color: var(--light-color);
+  transition: all 0.3s ease-in-out;
+}
+
+h1 {
+  color: var(--primary-color);
+  text-align: center;
+}
+
+p {
+  text-align: center;
+  font-size: 14px;
+}
+
+.btn {
+  padding: 8px 15px;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  background-color: var(--primary-color);
+  color: #fff;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: 700;
+  transition: all 0.3s linear;
+}
+
+.btn:hover { background-color: var(--secondary-color); }
+
+.money-img {
+  width: 150px;
+  margin: 0 auto;
+  display: block;
+}
+
+.currency {
+  padding: 40px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.currency select {
+  padding: 10px 20px 10px 10px;
+  border: 1px solid #dedede;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background: transparent;
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%20000002%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E');
+  background-position: right 10px top 50%, 0, 0;
+  background-repeat: no-repeat;
+  background-size: 12px auto, 100%;
+  font-size: 16px;
+}
+
+.currency input {
+  border: 0;
+  background: transparent;
+  font-size: 30px;
+  text-align: right;
+}
+
+.swap-rate-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.rate {
+  color: var(--primary-color);
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.updated { font-size: 12px; }
+
+select:focus,
+input:focus,
+button:focus { outline: 0; }
+
+@media screen and (max-width: 600px) {
+  .wrapper { width: 90%; }
+
+  .swap-rate-container {
+    display: block;
     text-align: center;
   }
-  
+
   .btn {
-    color: #fff;
-    background: var(--primary-color);
-    cursor: pointer;
-    border-radius: 5px;
-    font-size: 12px;
-    padding: 5px 12px;
+    width: 100%;
+    margin-bottom: 10px;
   }
   
-  .money-img {
-    width: 150px;
-  }
-  
-  .currency {
-    padding: 40px 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .currency select {
-    padding: 10px 20px 10px 10px;
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    appearance: none;
-    border: 1px solid #dedede;
-    font-size: 16px;
-    background: transparent;
-    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%20000002%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E');
-    background-position: right 10px top 50%, 0, 0;
-    background-size: 12px auto, 100%;
-    background-repeat: no-repeat;
-  }
-  
-  .currency input {
-    border: 0;
-    background: transparent;
-    font-size: 30px;
-    text-align: right;
-  }
-  
-  .swap-rate-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .rate {
-    color: var(--primary-color);
-    font-size: 14px;
-    padding: 0 10px;
+  .btn:hover { background-color: var(--primary-color); }
+
+  .swap-rate-container span {
+    margin-bottom: 5px;
+    display: block;
   }
 
-  .updated {
-    font-size: 12px;
+  .currency input {
+    width: 100%;
+    max-width: 200px;
   }
-  
-  select:focus,
-  input:focus,
-  button:focus {
-    outline: 0;
-  }
-  
-  @media (max-width: 600px) {
-    .currency input {
-      width: 200px;
-    }
-  }
+}
