--- a/movie-booking/style.css
+++ b/movie-booking/style.css
@@ -1,66 +1,64 @@
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
-* {
-  box-sizing: border-box;
-}
+* { box-sizing: border-box; }
 
 body {
+  min-height: 100vh;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
   background-color: #242333;
   color: #fff;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
   font-family: 'Lato', sans-serif;
-  margin: 0;
 }
 
-.movie-container {
-  margin: 20px 0;
-}
+.movie-container { margin: 20px 0; }
 
 .movie-container select {
-  background-color: #fff;
+  padding: 5px 15px 5px 15px;
   border: 0;
   border-radius: 5px;
-  font-size: 14px;
   margin-left: 10px;
-  padding: 5px 15px 5px 15px;
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
+  background-color: #fff;
+  cursor: pointer;
+  font-size: 14px;
 }
 
 .container {
-  perspective: 1000px;
   margin-bottom: 30px;
+  perspective: 1000px;
 }
 
+.seat-row { font-size: 12px; }
+
 .seat {
-  background-color: #444451;
   height: 12px;
   width: 15px;
-  margin: 3px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  margin: 3px;
+  background-color: #444451;
+  font-size: 8px;
+  text-align: center;
 }
 
 .seat.selected {
   background-color: #6feaf6;
+  color: #000;
 }
 
 .seat.occupied {
   background-color: #fff;
+  color: #000;
 }
 
-.seat:nth-of-type(2) {
-  margin-right: 18px;
-}
-
-.seat:nth-last-of-type(2) {
-  margin-left: 18px;
-}
+.seat:nth-of-type(3) { margin-right: 18px; }
+.seat:nth-last-of-type(2) { margin-left: 18px; }
 
 .seat:not(.occupied):hover {
   cursor: pointer;
@@ -73,43 +71,33 @@ body {
 }
 
 .showcase {
-  background: rgba(0, 0, 0, 0.1);
   padding: 5px 10px;
   border-radius: 5px;
-  color: #777;
-  list-style-type: none;
   display: flex;
   justify-content: space-between;
+  background: rgba(0, 0, 0, 0.1);
+  color: #777;
+  list-style-type: none;
 }
 
 .showcase li {
+  margin: 0 10px;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 10px;
 }
 
-.showcase li small {
-  margin-left: 2px;
-}
-
-.row {
-  display: flex;
-}
+.showcase li small { margin-left: 2px; }
+.row { display: flex; }
 
 .screen {
-  background-color: #fff;
-  height: 70px;
   width: 100%;
+  height: 70px;
   margin: 15px 0;
-  transform: rotateX(-45deg);
+  background-color: #fff;
   box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7);
+  transform: rotateX(-45deg);
 }
 
-p.text {
-  margin: 5px 0;
-}
-
-p.text span {
-  color: #6feaf6;
-}
+p.text { margin: 5px 0; }
+p.text span { color: #6feaf6; }
