--- a/currency-exchange/style.css
+++ b/currency-exchange/style.css
@@ -35,12 +35,15 @@ body {
 
 h1 {
   color: var(--primary-color);
+  font-size: 34px;
   text-align: center;
+  transition: all 0.3s linear;
 }
 
 p {
   text-align: center;
   font-size: 14px;
+  transition: all 0.3s linear;
 }
 
 .btn {
@@ -62,10 +65,10 @@ p {
   width: 150px;
   margin: 0 auto;
   display: block;
+  transition: all 0.3s linear;
 }
 
 .currency {
-  /* padding: 40px 0; */
   margin-top: 40px;
   display: flex;
   align-items: center;
@@ -148,4 +151,10 @@ button:focus { outline: 0; }
     width: 100%;
     max-width: 200px;
   }
+}
+
+@media screen and (max-width: 480px) {
+  h1 { font-size: 22px; }
+  p { font-size: 12px; }
+  .money-img { width: 100px; }
 }
