--- a/movie-booking/style.css
+++ b/movie-booking/style.css
@@ -2,8 +2,11 @@
 
 :root {
   --modal-duration: 1s;
-  --primary-color: #30336b;
-  --secondary-color: #be2edd;
+  --primary-color: #242333;
+  --secondary-color: #30336b;
+  --light-color: #fff;
+  --dark-color: #000;
+  --cyan-color: #6feaf6;
 }
 
 * { box-sizing: border-box; }
@@ -15,8 +18,8 @@ body {
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  background-color: #242333;
-  color: #fff;
+  background-color: var(--primary-color);
+  color: var(--light-color);
   font-family: 'Lato', sans-serif;
 }
 
@@ -31,7 +34,7 @@ body {
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
-  background-color: #fff;
+  background-color: var(--light-color);
   cursor: pointer;
   font-size: 14px;
 }
@@ -55,13 +58,14 @@ body {
 }
 
 .seat.selected {
-  background-color: #6feaf6;
-  color: #000;
+  background-color: var(--cyan-color);
+  color: var(--dark-color);
 }
 
 .seat.occupied {
-  background-color: #fff;
-  color: #000;
+  background-color: var(--light-color);
+  color: var(--dark-color);
+  cursor: not-allowed;
 }
 
 .seat:nth-of-type(3) { margin-right: 18px; }
@@ -101,7 +105,7 @@ body {
   width: 100%;
   height: 70px;
   margin: 15px 0;
-  background-color: #fff;
+  background-color: var(--light-color);
   box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7);
   color: #ccc;
   transform: rotateX(-45deg);
@@ -112,13 +116,33 @@ body {
 }
 
 p.text { margin: 5px 0; }
-p.text span { color: #6feaf6; }
+p.text span { color: var(--cyan-color); }
 
 button {
   padding: 5px;
   border: none;
   outline: none;
   cursor: pointer;
+}
+
+.book-btn-container {
+  margin: 20px 0;
+}
+
+.book-btn-container .book-btn {
+  padding: 5px 12px;
+  border: 2px solid var(--light-color);
+  border-radius: 5px;
+  font-size: 16px;
+  background-color: var(--light-color);
+  color: var(--primary-color);
+  font-weight: 700;
+  transition: all 0.3s linear;
+}
+
+.book-btn-container .book-btn:hover {
+  background-color: var(--primary-color);
+  color: var(--light-color);
 }
 
 .modal-container {
@@ -136,30 +160,32 @@ button {
 }
 
 .modal {
-  background-color: #fff;
-  border-radius: 5px;
+  background-color: var(--light-color);
+  border-radius: 10px;
+  outline: none;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   position: absolute;
   overflow: hidden;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  max-width: 100%;
-  width: 800px;
+  width: 100%;
+  max-width: 800px;
   animation-name: modalopen;
   animation-duration: var(--modal-duration);
-  color: #000;
+  color: var(--dark-color);
 }
 
 .modal-header {
-  background: var(--primary-color);
-  color: #fff;
+  background: var(--secondary-color);
+  color: var(--light-color);
   padding: 15px;
 }
 
 .modal-header h3 {
   margin: 0;
   border-bottom: 1px solid #333;
+  font-size: 22px;
 }
 
 .movie-content {
@@ -195,17 +221,50 @@ button {
   margin: 5px;
   display: inline-block;
   list-style-type: none;
-  background-color: var(--primary-color);
-  color: #fff;
+  background-color: var(--secondary-color);
+  color: var(--light-color);
+}
+
+.movie-content .title {
+  font-size: 32px;
+  margin: 20px auto 10px;
+}
+
+.movie-content p {
+  margin: 10px 0;
+  font-size: 16px;
+}
+
+.movie-content h5 {
+  font-size: 18px;
+  margin: 20px auto 10px;
+}
+
+.movie-content .screen-number {
+  padding: 5px 10px;
+  border: 2px solid var(--dark-color);
+  margin: 10px 0 0;
+  display: inline-block;
+}
+
+.movie-content .amount-paid {
+  font-size: 18px;
+  margin-top: 20px;
+}
+
+
+.movie-content .amount-paid span {
+  font-size: 16px;
+  font-weight: 400;
 }
 
 .close-btn {
   background: transparent;
   font-size: 25px;
   position: absolute;
-  top: 0;
-  right: 0;
-  color: #fff;
+  top: 10px;
+  right: 10px;
+  color: var(--light-color);
 }
 
 @keyframes modalopen {
