movie-booking app: booking info section added in modal

--- a/movie-booking/style.css
+++ b/movie-booking/style.css
@@ -9,6 +9,13 @@
   --cyan-color: #6feaf6;
 }
 
+/* Custom Scrollbar */
+::-webkit-scrollbar { width: 5px; height: 5px; }
+::-webkit-scrollbar-track { background: var(--light-color); }
+::-webkit-scrollbar-thumb { background: var(--primary-color); border-radius: 25px;}
+::-webkit-scrollbar-thumb:hover { background: var(--secondary-color); }
+
+
 * { box-sizing: border-box; }
 
 body {
@@ -153,6 +160,7 @@ button {
   left: 0;
   right: 0;
   bottom: 0;
+  overflow-y: auto;
 }
 
 .modal-container.show-modal {
@@ -169,7 +177,9 @@ button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 100%;
+  width: 90%;
+  height: 90%;
+  overflow-y: auto;
   max-width: 800px;
   animation-name: modalopen;
   animation-duration: var(--modal-duration);
@@ -196,6 +206,21 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.movie-content .booking-info {
+  padding: 20px;
+  border: 2px dashed var(--dark-color);
+  border-radius: 10px;
+  margin-top: 20px;
+}
+
+.booking-info .booking-id {
+  margin-top: 10px;
+}
+
+.booking-info .title-info {
+  font-size: 22px;
 }
 
 .movie-content figure {
